pages/page3/page3.css
/* #region GENERAL STYLES */
html {
	font-size: var(--font-size);
	background-color: var(--bg);
	color: var(--text);
	font-family: var(--bfont);
	line-height: 1.125;
}
a {
	color: inherit;
	text-decoration: none;
	border-bottom: 1px solid;
}
main a[href]:hover, #right a[href]:hover { color: rgba(var(--text--rgb), 0.65) }
.button {
	cursor: pointer;
	display: inline-block;
	border-radius: 0.3em;
	padding: 0.35em 0.8em;
	margin: 0.3em 0.5em;
	border: 1px solid var(--bg2);
	color: var(--text);
	background: var(--bg) linear-gradient(var(--bg), var(--bg2));
}
.button:hover, .button:focus, .button.active,
#search input:hover, #search input:focus {
	box-shadow: inset 0.25em 0.25em 0.25em var(--bg2)
}
.button:hover { color: var(--accent) }
.button:active {
	color: var(--text);
	background-image: unset;
}
h1, h2, h3, h4, h5, h6 { font-family: var(--tfont) }
h2 {
	font-size: 2.35rem;
	font-weight: normal;
	margin: 0.1rem 0;
}
h3 {
	font-size: 1.4rem;
	font-weight: normal;
}
p, li { margin: 1.375em 0 }
blockquote {
	border-inline-start: 0.14em solid var(--bg2);
	margin-inline-start: 1.5em;
	padding: 0.75em;
}
blockquote > *:first-child { margin-block-start: 0 }
blockquote > *:last-child { margin-block-end: 0 }
ul {
	margin: 1.125em 0;
	padding: 0 1em;
}
ol {
	margin: 0.75em 0;
	padding: 0 1.5em;
}
li { margin: 0.75em 0 0.75em 1.75em }
hr {
	width: 33%;
	margin: 0.875em auto 1.25em;
}
/* Accessibility */
#skip, #hiddentitle, #search label {
	position: fixed;
	font-size: 1px;
	top: -100rem;
}
/* Tooltips */
#s-m-t-tooltip {
	margin: 1em;
	padding: 0.25em 0.5em;
	background: var(--bg);
	border: thin solid var(--bg2);
	box-shadow: 0.1em 0.1em 0.25em -0.1em rgba(var(--text--rgb), 0.75);
}
/* #region Casing */
body.upper h1, body.upper h2, body.upper h3, body.upper h4,
body.upper .button, body.upper #links-search, body.upper footer {
	text-transform: uppercase;
}
body.lower h1, body.lower h2, body.lower h3, body.upper h4, body.lower .pagination,
body.lower .button, body.lower #links-search, body.lower footer {
	text-transform: lowercase;
}
/* #endregion */
/* #endregion */



/* #region HEADER */
#header { margin: 0 0 1em }
#title {
	display: flex;
	border: none;
	align-items: center;
	height: 3.75em;
	width: fit-content;
	padding-right: 1.25em;
	gap: 0.25em;
}
#title h1 {
	font-weight: var(--tweight);
	color: var(--accent);
	font-size: 1.75em;
	margin: 0;
}
#title:hover { color: inherit }
#avatar, #logo {
	height: 100%;
	width: auto;
}
.padded#avatar, .padded#logo { padding: 0.4em 0 }
/* #region Links/search bar */
#links-search {
	background: var(--accent) linear-gradient(var(--accent) 50%, rgba(var(--text--rgb), 0.3));
	display: flex;
	flex-flow: row wrap;
	align-items: center;
	justify-content: space-between;
	padding: 0 0.7em 0 2em;
}
html:not(.alt) .invert #links-search, html.alt .altinvert #links-search {
	background: var(--bg2) linear-gradient(rgba(var(--text--rgb), 0.2), rgba(var(--bg--rgb), 0.5) 90%);
}
html:not(.alt) .invert #links-search *, html.alt .altinvert #links-search * { color: var(--text) !important }
#links span {
	border-bottom: none;
	color: var(--bg);
	display: inline-flex;
	padding: 0.5em 0.75em;
}
#links .current-page { font-weight: bold }
#mobnav { display: inline-block }
#mobnav:not(.a, .s) { display: none }
#mobnav a:hover, #mobnav:hover span, #pages:hover span {
	color: var(--text);
	background-color: var(--bg2);
}
/* #endregion */
/* #region Custom pages */
#links #pages { display: inline-block }
#pages:not(:hover) .dropdown { opacity: 0; pointer-events: none }
#pages .dropdown {
	position: absolute;
	left: 0;
	display: flex;
	flex-direction: column;
	background-color: var(--bg2);
	padding: 0.25em;
	box-shadow: 0.1em 0.1em 0.25em -0.1em rgba(var(--text--rgb), 0.75);
	z-index: 4;
}
#pages span { cursor: help }
#pages .dropdown a {
	padding: .75em .5em .5em;
	border-color: var(--text);
}
#pages .dropdown a:last-child { border-bottom: none }
#pages .dropdown a:hover {
	color: inherit;
	background-color: rgba(var(--bg--rgb), 0.25);
}
/* #endregion */
/* #region Search bar */
#search {
	display: flex;
	align-items: center;
	gap: 0.7em;
	margin: 0.175em 0;
}
#search input {
	border: none;
	margin: 0;
	color: var(--text);
	background: var(--bg) linear-gradient(var(--bg), var(--bg2));
}
#search #q {
	height: 1.55em;
	width: 11.5em;
	border-radius: 1em;
	padding: 0.15em 0.5em;
}
#search input.button { height: 1.75em }
/* #endregion */
/* #endregion */



/* #region CENTER */
#page {
	padding: 0.5em 2.5em 3.5em;
	align-self: start;
}
/* #region Actions menu */
.tmblr-iframe--unified-controls.iframe-controls--desktop ~ #body #actions { top: 50px }
#actions {
	margin-bottom: 1em;
	margin-left: auto;
	position: sticky;
	top: 0.5em;
	z-index: 3;
	width: fit-content;
}
.button.active, .pagination a.curr:not([href]):hover {
	box-shadow: inset 0.25em 0.25em 0.25em rgba(var(--text--rgb), 0.2);
	background: var(--bg2);
}
#scrolltotop_parent { display: inline-block }
/* #endregion */
/* #endregion */



/* #region FOOTER */
html, body { height: 100vh }
#body {
	min-height: 100vh;
	display: grid;
	grid-template-rows: auto 1fr auto;
}
#footer {
	background-color: var(--accent);
	color: var(--bg);
	padding: 2em 6%;
	font-size: 0.875em;
	display: flex;
	flex-flow: row wrap;
	gap: 4%;
}
#footer > div { flex-grow: 1 }
#footer div div {
	max-height: 11em;
	writing-mode: vertical-lr;
	display: flex;
	flex-wrap: wrap;
	justify-content: start;
	align-items: start;
	width: fit-content;
	row-gap: 7.5vw;
}
#footer h3 {
	margin: 0 0 0.5em;
	font-weight: normal;
}
#footer a, #footer span {
	border: none;
	padding: 0.5em 0;
	writing-mode: horizontal-tb;
}
#footer span { color: rgba(var(--bg--rgb), 0.9) }
#footer a {
	color: var(--bg);
	text-decoration: underline;
	text-underline-offset: 0.3em;
}
#footer a:hover { text-decoration-style: dotted }
/* #endregion */



/* #region WORK */
#main a { line-height: 1.5 }
/* #region Tags */
#worktags {
	border: thin solid var(--bg2);
	box-shadow: 0.1em 0.1em 0.356em rgba(var(--text--rgb), 0.5);
	padding: 1.25em 0.75em;
	line-height: 1.286;
	display: grid;
	grid-template-columns: 1fr 3fr;
	row-gap: 1em;
}
#worktags * { margin: 0 }
#worktags dt::after { content: ":" }
#worktags > dd > a { border-bottom: 1px dotted }
#worktags > dd > a:hover { background-color: var(--accent); color: var(--bg) }
#worktags .warning { font-weight: bold }
#worktags .stats * { display: inline; margin: 0 0.1em }
.stats :first-child { margin-left: 0 }
#worktags .stats dd + dt { margin-left: 0.75em }
/* Series navigation */
.series .separator::before {
	content: "\25CF";
	margin: 0 0.35em;
	color: rgba(var(--text--rgb), 0.6);
}
.series .prev::before { content: "← " }
.series .next::after { content: " →" }
/* #endregion */
#workhead, #workbody, #workfoot {
	margin: auto;
	max-width: 80em;
}
/* #region Header */
#workhead { padding: 2em 4em 0 }
#workhead > :is(h2, h3) { text-align: center }
#workhead > h3 {
	margin: 0.5em 0;
	color: rgba(var(--text--rgb), 0.7);
}
h3.heading {
	line-height: 1;
	border-bottom: thin solid;
	margin: 0.25em 0;
}
:is(#summary, #top) div {
	margin: 0.75em;
	line-height: 1.5;
	font-size: 1.08em;
}
:is(#summary, #top) div :first-child { margin-top: 0 }
:is(#summary, #top) div :last-child { margin-bottom: 0 }
#summary + #top { margin-top: 2em }
.jump {
	margin-top: 1.5em;
	font-size: 1.08em;
}
#workhead:not(:nth-last-child(3)) .jump { display: none }
/* #endregion */
/* #region Work body */
#workbody {
	line-height: 1.5;
	font-size: 1.08em;
	padding: 2em 0;
}
#workbody h1 {
	font-size: 2.5em;
	font-weight: normal;
	text-align: center;
}
#workbody h2 {
	color: rgba(var(--text--rgb), 0.9);
	margin: 1.3em 0;
}
#workbody h3 {
	line-height: 1;
	padding: .125em;
	border-block-end: 0.25em double rgba(var(--text--rgb), 0.9);
	margin: 0.5em 0;
}
#workbody h4 {
	font-size: 1.143em;
	margin: 0.5em 0;
}
#workbody h5 {
	font-size: 1em;
	margin: 0.75em 0;
	line-height: 1.286;
}
#workbody h6 {
	font-size: 0.975em;
	margin: 1.5em 0;
	border-bottom: thin solid;
}
/* #endregion */
/* #region Work footer */
#workfoot { padding: 0 4em 2em }
#series h3 { border: none }
#series ul {
	list-style: none;
	margin: 0;
	padding: 0 0.75em;
}
/* #endregion */
/* #endregion */



/* #region RESPONSIVENESS */
@media (min-width: 60rem) { /* Desktop */
	#mobnav span { display: none }
	#mobnav a {
		border-bottom: none;
		color: var(--bg);
		display: inline-flex;
		padding: 0.5em 0.75em;
	}
	#links #pages { position: relative }
	#links #pages .dropdown {
		left: 0;
		min-width: 20rem;
	}
}

@media (max-width: 60rem) { /* Mobile */
	#page { padding: 0.5em 3.5% 3.5em }
	
	#links-search { padding: 0 0.7em 0 0 }
	#mobnav span { cursor: help }
	#mobnav:not(:hover) .dropdown { opacity: 0; pointer-events: none }
	#mobnav .dropdown {
		position: absolute;
		left: 0;
		display: flex;
		flex-direction: column;
		background-color: var(--bg2);
		padding: 0.25em;
		box-shadow: 0.1em 0.1em 0.25em -0.1em rgba(var(--text--rgb), 0.75);
		z-index: 4;
	}
	#mobnav .dropdown a {
		padding: .75em .5em .5em;
		border-color: var(--text);
	}
	#mobnav .dropdown a:last-child { border-bottom: none }
	#mobnav .dropdown a:hover {
		color: inherit;
		background-color: rgba(var(--bg--rgb), 0.25);
	}
	#links .dropdown { width: 100% }
	
	#workhead, #workbody, #workfoot { margin: auto 1.5% }
}

@media (max-width: 40em) {
	html { font-size: calc(0.875 * var(--font-size)) }
	
	#worktags { display: block }
	#worktags > dd { margin: 0 0 0.75em 1em }
}
/* #endregion */

